# little-red-writing-room

./: .gitignore  LICENSE  README.md  SUBMISSION.md  justfile
.cursor/rules/: fastapi-di.mdc  langgraph-agents.mdc  python-ai-engineering.mdc  rag-retrieval-chunking.mdc
docs/: ARCHITECTURE.md  PRODUCT.md
docs/ADRs/: ADR-001-Content-Upload-Extract.md  ADR-002-Frontend-Backend-Chat-Integration.md
notebooks/: README.md  pyproject.toml  rag_evaluation.ipynb
notebooks/lib/: chains.py  chunking.py  classification.py  data_loading.py  evaluation.py
notebooks/references/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  Agent_Memory_Assignment.ipynb
notebooks/sample_data/: purplefrog-finds-her-brother.md
srv/: .env.example  pyproject.toml
srv/agents/: base.py
srv/agents/avatar/: agent.py  config.py  prompts.py  schemas.py
srv/agents/gap_detection/: agent.py  config.py  schemas.py
srv/agents/session/: service.py
srv/agents/supervisor/: agent.py  config.py  schemas.py
srv/agents/tools/retrieval/: config.py  schemas.py  tool.py
srv/agents/tools/tavily/: config.py  tool.py
srv/app/: auth.py  config.py  containers.py  main.py
srv/app/api/: deps.py
srv/app/api/routes/: characters.py  chat.py  chats.py  documents.py
srv/app/services/: document_store.py  progress.py
srv/migrations/: 001_create_chat_tables.sql  002_create_characters_table.sql
srv/pipeline/: classification.py  config.py  modal_app.py  runner.py  service.py
srv/scripts/: migrate.py
srv/tests/: conftest.py  test_agents.py  test_auth.py  test_chat_stream.py  test_chats_crud.py  test_pipeline.py  test_session_service.py
web/: package-lock.json  package.json  pnpm-lock.yaml  vitest.config.mts  vitest.config.ts
web/__tests__/: api.test.ts  avatar-selector.test.tsx  chat-page.test.tsx  content-page.test.tsx  documents-api.test.ts  dummy-data.test.ts  login-page.test.tsx  message-bubble.test.tsx  sidebar.test.tsx
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx
web/src/app/chat/: layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/components/: app-sidebar.tsx  avatar-selector.tsx  chat-area.tsx  chat-input.tsx  login-form.tsx  message-bubble.tsx  user-menu.tsx
web/src/lib/: api.ts  app-state.tsx  dummy-data.ts
web/src/lib/supabase/: server.ts
web/src/types/: chat.ts  index.ts
(+4 files in other folders)
